--- a/etaamb/css/smphone.css
+++ b/etaamb/css/smphone.css
@@ -836,3 +836,55 @@ span.match_preview{
     text-decoration:underline;
     }
 
+
+/********************* Debug */
+div#debug {
+	z-index:1000;
+	position:fixed;
+	right:0;
+	top:0;
+	font-family:monospace;
+	color:#000;
+	overflow-y:scroll;
+    max-width:60%;
+	border-bottom:2px solid #000;
+	}
+
+div#debug.line { max-height:1.4em; }
+div#debug.third { max-height:33%; }
+div#debug.twothirds { max-height:66%; }
+div#debug.full { max-height:100%; }
+
+
+	div#debug div {
+		background-color:yellow;
+		opacity:.9;
+		padding:0px 3px 0 6px;
+		}
+
+	div#debug h1 {
+		line-height:14px;
+		font-size:.8rem;
+		margin:0;padding:0;
+		display:inline;
+		}
+
+	div#debug table {
+		border:1px solid #000;
+		border-collapse:collapse;
+		}
+
+	div#debug table td
+	div#debug table th {
+		padding:4px;
+		}
+
+	div#debug .chapter {
+		font-weight:bold;
+		text-decoration:underline;
+		}
+
+	div#debug .sub {
+		font-weight:bold;
+		}
+	
