--- a/etaamb/css/smphone.css
+++ b/etaamb/css/smphone.css
@@ -689,6 +689,48 @@ div.actions {
 		opacity:.6;
 		}
 
+
+/* Multi align styles */
+.document_multi {
+    box-shadow: 0px 0px 7px -4px #002;
+    background-color:#fff;
+    padding:10px 4px;
+    margin-left:-2px;
+	width:98%;
+	z-index:400;
+	border-top-right-radius:8px;
+	border-top-left-radius:8px;
+	-moz-border-radius-topright:8px;
+	-moz-border-radius-topleft:8px;
+	-webkit-border-top-left-radius:8px;
+	-webkit-border-top-right-radius:8px;
+    }
+
+    table#multialign {
+        table-layout:fixed;
+        border-collapse:collapse;
+        width:100%;
+    }
+    #multialign tbody tr:nth-child(odd) {
+      background-color: #fff;
+    }
+    
+    #multialign tbody tr:nth-child(even) {
+      background-color: #f6f6f6;
+    }
+
+    #multialign td {
+        padding: .3rem 1rem;
+        vertical-align:top;
+    }
+
+    td.sep {
+        height:1.5rem;
+    }
+
+
+
+
 span.link .linktitle {
 	color:#33f;
 	border-bottom:1px dotted #33f;
