--- a/etaamb/css/style.css
+++ b/etaamb/css/style.css
@@ -938,6 +938,51 @@ table.doclink {
         color:#010106;
         }
 
+/* Multi align styles */
+.document_multi {
+    box-shadow: 0px 0px 7px -4px #002;
+    background-color:#fbfbff;
+    padding:10px 4px;
+    margin-left:0px;
+	width:95%;
+    max-width:85rem;
+	z-index:400;
+	border-top-right-radius:8px;
+	border-top-left-radius:8px;
+	-moz-border-radius-topright:8px;
+	-moz-border-radius-topleft:8px;
+	-webkit-border-top-left-radius:8px;
+	-webkit-border-top-right-radius:8px;
+    }
+
+    table#multialign {
+        table-layout:fixed;
+        border-collapse:collapse;
+        width:100%;
+    }
+    #multialign tbody tr:nth-child(odd) {
+      background-color: #fff;
+    }
+    
+    #multialign tbody tr:nth-child(even) {
+      background-color: #f6f6f6;
+    }
+
+    #multialign td {
+        padding: .3rem 1rem;
+        vertical-align:top;
+    }
+
+    #multialign tr:has(td:hover) {
+        background-color:#d1e5f4;
+    }
+
+    td.sep {
+        height:1.5rem;
+    }
+
+
+
 #divider {
     display:flex;
     flex-direction:row;
